[package]
name = "qua_ten_net"
version = "0.1.0"
edition = "2021"


description = "Rust package providing essential tools for working with tensor networks in computational quantum physics."
repository = "https://github.com/hoomania/QuaTenNet"
keywords = [
"computational-quantum-physics",
"tensor-network",
"tensor-contraction",
"tensor-dot",
"greedy-contraction-algorithm"
]

categories = ["science", "physics", "quantum", "simulation"]

license = "GPL-3.0-or-later"


[dependencies]
ndarray = "0.16.1"
